fix: fixed progress-bar for dark mode

--- a/apps/frontend/src/app/header/header.component.css
+++ b/apps/frontend/src/app/header/header.component.css
@@ -1,3 +1,13 @@
 .text-shadow {
   text-shadow: 0 0 2px var(--black-light);
 }
+
+.header-background {
+  @apply bg-gray-50 border-b border-gray-100;
+}
+
+@media (prefers-color-scheme: dark) {
+  .header-background {
+    @apply bg-transparent border-b border-transparent;
+  }
+}
